$Id: changelog,v 1.103 2015/08/07 16:39:42 alfred Exp $
------------------------------------------------------------------------------

2015-08-07 [1.42 Bld 99]

- Bugfix      : Correct handling of variadic macros
- Bugfix      : Suppress detection of 0x... as floating
                point constant on some platforms

2015-05-25 [1.42 Bld 98]

- Addition    : Add TMS1000 target

2014-12-20 [1.42 Bld 97]

- Bugfix      : repair -cpu command line option that was broken in previous build

2014-12-07 [1.42 Bld 96]

- Change      : rework/cleanup PIC, 1802, 3201x, 3202x, 3203x, 3206x, 3254x,
                4004, MELPS4500, 47Cxx, MCS-48/51, 56K, PowerPC, 65xx, 68xx, 68K targets

- Addition    : Add TLCS-870/C target

- Bugfix      : correct handling of TLCS-870 JR instruction without condition

2014-09-21 [1.42 Bld 95]

- Change      : flip order of changelog

- Change      : rework/cleanup 75K0, SH, 80C16x targets

- Addition    : allow keyword arguments and parameter defaults for macros

2014-08-31 [1.42 Bld 94]

- Bugfix      : for Z80 target, detect invalid condition identifiers

- Bugfix      : avoid infinite loop on M16 when chained addressing is used incorrectly

- Change      : rework/cleanup COP8, AVR, ACE, TMS9900, TLCS/9000, TLCS/900, i960,
                MCS-96, TLCS/90, 8X30x, TLCS/870, 8086, 8085, 78Kx, 78c10, uPD77230, uPD772x,
                65816/7700 targets, complete reworks and testcase on M16

- Bugfix      : BCLR/BSET/BSETI/BTST on M16 use format G/E/Q instead of G/E/R

- Bugfix      : do not allow JSR with direct mode on 6800

- Bugfix      : correct 8087 FIMUL coding

- Bugfix      : correct JSL/JML byte order for 65816

- Bugfix      : correct COP, PEI, PEA, BIT instructions for 65816

- Bugfix      : use correct bank register for 65816 JMP/JSR instruction

- Addition    : on 65816, allow DBR as alias for DT and PBR as alias for PG

2014-06-19 [1.42 Bld 93]

- Change      : put entry address into 01 record for Intel8 hex format
